--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       href="../src/assets/DFgnWp.png"
       type="image/x-icon"
     />
+    <link
+      rel="shortcut icon"
+      href="../src/assets/DFgnWp.png"
+      type="image/x-icon"
+    />
     <title>Matrix Tech</title>
 
     <!-- FontAwsome cdn -->
